--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p>
 			<img src="Tadi.jpg"></img>
 		
-		</br>I am a 21 year old student at Harare Institute of Technology, studying for a Bachelor Of Technology Honours degree in School of Information Technology. Pursuing the dream of wanting to become a Full-Stack developer.
+		</br>I am a 21 year old student at Harare Institute of Technology(HIT), studying for a Bachelor Of Technology Honours degree in School of Information Technology. Pursuing the dream of wanting to become a Full-Stack developer.
 		</p>
 		<h3>Academics</h3>
 			<p>
